# Safe-Robot-Navigation-in-a-Crowd-Combining-NMPC-and-CBF

./: README.md
labrob_crowd_navigation/labrob_crowd_control/: CMakeLists.txt  package.xml  setup.py
labrob_crowd_navigation/labrob_crowd_control/launch/: cbf_qp_motion_generation_manager.launch  nmpc_motion_generation_manager.launch
labrob_crowd_navigation/labrob_crowd_control/plots/corridor_5_nearest_waypoint/: corridor_5_nearest_waypoint.npz  corridor_5_nearest_waypoint_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/corridor_5_next_waypoint/: corridor_5_next_waypoint.npz  corridor_5_next_waypoint_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/corridor_5_prediction/: corridor_5_prediction.npz  corridor_5_prediction_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/corridor_5_time/: corridor_5_time.npz  corridor_5_time_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/double_10_nearest_waypoint/: double_10_nearest_waypoint.npz  double_10_nearest_waypoint_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/double_10_next_waypoint/: double_10_next_waypoint.npz  double_10_next_waypoint_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/double_10_prediction/: double_10_prediction.npz
labrob_crowd_navigation/labrob_crowd_control/plots/double_10_time/: double_10_time.npz
labrob_crowd_navigation/labrob_crowd_control/plots/double_5_nearest_waypoint/: double_5_nearest_waypoint.npz  double_5_nearest_waypoint_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/double_5_next_waypoint/: double_5_next_waypoint.npz  double_5_next_waypoint_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/double_5_prediction/: double_5_prediction.npz
labrob_crowd_navigation/labrob_crowd_control/plots/double_5_time/: double_5_time.npz
labrob_crowd_navigation/labrob_crowd_control/plots/office_10_nearest_waypoint/: office_10_nearest_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots/office_10_next_waypoint/: office_10_next_waypoint.npz  office_10_next_waypoint_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/office_10_prediction/: office_10_prediction.npz
labrob_crowd_navigation/labrob_crowd_control/plots/office_10_time/: office_10_time.npz  office_10_time_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/office_15_nearest_waypoint/: office_15_nearest_waypoint.npz  office_15_nearest_waypoint_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/office_15_next_waypoint/: office_15_next_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots/office_15_prediction/: office_15_prediction.npz
labrob_crowd_navigation/labrob_crowd_control/plots/office_15_time/: office_15_time.npz  office_15_time_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/office_5_nearest_waypoint/: office_5_nearest_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots/office_5_next_waypoint/: office_5_next_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots/office_5_prediction/: office_5_prediction.npz  office_5_prediction_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots/office_5_time/: office_5_time.npz
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/corridor_5_nearest_waypoint/: corridor_5_nearest_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/corridor_5_next_waypoint/: corridor_5_next_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/corridor_5_prediction/: corridor_5_prediction.npz
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/corridor_5_time/: corridor_5_time.npz
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/double_10_nearest_waypoint/: double_10_nearest_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/double_10_next_waypoint/: double_10_next_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/double_10_prediction/: double_10_prediction.npz  double_10_prediction_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/double_10_time/: double_10_time.npz  double_10_time_other_data.json
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/double_5_nearest_waypoint/: double_5_nearest_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/plots_v_cost/double_5_next_waypoint/: double_5_next_waypoint.npz
labrob_crowd_navigation/labrob_crowd_control/scripts/: cbf_qp_motion_generation_manager  nmpc_motion_generation_manager
labrob_crowd_navigation/labrob_crowd_navigation/: CMakeLists.txt  package.xml
labrob_crowd_navigation/labrob_crowd_navigation_msgs/: CMakeLists.txt  package.xml
labrob_crowd_navigation/labrob_crowd_navigation_msgs/msg/: CrowdMotionPrediction.msg  CrowdMotionPredictionStamped.msg  MotionPrediction.msg
labrob_crowd_navigation/labrob_crowd_navigation_utils/: CMakeLists.txt  package.xml  setup.py
labrob_crowd_navigation/labrob_crowd_perception/: CMakeLists.txt  package.xml  setup.py
labrob_crowd_navigation/labrob_crowd_perception/launch/: crowd_perception_camera.launch  crowd_perception_ground_truth.launch  crowd_perception_laser_scan.launch
labrob_crowd_navigation/labrob_crowd_perception/scripts/: crowd_perception_camera  crowd_perception_ground_truth  crowd_perception_laser_scan
labrob_gazebo_worlds/: CMakeLists.txt  README.md  package.xml
labrob_gazebo_worlds/worlds/: labrob_corridor_5_humans.world  labrob_empty.world  labrob_obs_1box_1cil.world  labrob_obs_2cil.world  labrob_office_double_10_humans.world  labrob_office_double_5_humans.world  labrob_simple_office_10_humans.world  labrob_simple_office_15_humans.world  labrob_simple_office_5_humans.world
(+44 files in other folders)
