<?xml version="1.0"?>
<package format="2">
  <name>labrob_gazebo_worlds</name>
  <version>0.0.0</version>
  <description>The labrob_gazebo_worlds package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
