<?xml version="1.0"?>
<package format="2">
  <name>labrob_crowd_control</name>
  <version>0.0.0</version>
  <description>The labrob_crowd_control package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>labrob_crowd_navigation_msgs</depend>
  <depend>labrob_crowd_navigation_utils</depend>
</package>
