<?xml version="1.0"?>
<package format="2">
  <name>labrob_crowd_navigation</name>
  <version>0.0.0</version>
  <description>The labrob_crowd_navigation package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>labrob_crowd_control</exec_depend>
  <exec_depend>labrob_crowd_navigation_msgs</exec_depend>
  <exec_depend>labrob_crowd_navigation_utils</exec_depend>
  <exec_depend>labrob_crowd_perception</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
