<?xml version="1.0"?>
<package format="2">
  <name>labrob_crowd_navigation_utils</name>
  <version>0.0.0</version>
  <description>The labrob_crowd_navigation_utils package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>labrob_crowd_navigation_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>labrob_crowd_navigation_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>labrob_crowd_navigation_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
